Bug 303570 - In Rooted Tree mode, edges are created in only one of the views randomly
Summary: In Rooted Tree mode, edges are created in only one of the views randomly
Status: RESOLVED FIXED
Alias: None
Product: Rocs
Classification: Applications
Component: visual graph editor (other bugs)
Version First Reported In: Git
Platform: Microsoft Windows Microsoft Windows
: NOR major
Target Milestone: ---
Assignee: Rocs Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-15 16:47 UTC by Andrius
Modified: 2012-09-23 13:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
step by step (6.35 KB, application/octet-stream)
2012-07-15 16:59 UTC, Andrius
Details
Fix add child in not show all pointer mode (3.04 KB, patch)
2012-07-17 15:50 UTC, Wagner Reck
Details
Fix add edge in show all pointer mode (838 bytes, patch)
2012-07-21 20:48 UTC, Wagner Reck
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrius 2012-07-15 16:47:28 UTC
In Rooted Tree mode, edges are created in only one of the views randomly.



Reproducible: Always

Steps to Reproduce:
I've created the nodes and edges and saved each step, see attachment.
Comment 1 Andrius 2012-07-15 16:59:44 UTC
Created attachment 72536 [details]
step by step
Comment 2 Wagner Reck 2012-07-17 15:46:50 UTC
Hello Andrius,

can you please test this patch?

it fixes the case of add connection (edges) in a rooted tree if the show all pointers is not checked, in others words, when the rooted tree is represented only by small circles an simple edges.
Comment 3 Wagner Reck 2012-07-17 15:50:05 UTC
Created attachment 72587 [details]
Fix add child in not show all pointer mode
Comment 4 Andrius 2012-07-21 04:06:44 UTC
Current version fixes it when drawing with "show all pointers" unchecked. Now, when it is checked the edges created in this view mode are actually only shown in the other view mode (i.e.: created edges with 'show all pointers' checked, but those are only seen with it unchecked)
Comment 5 Wagner Reck 2012-07-21 20:48:42 UTC
Created attachment 72673 [details]
Fix add edge in  show all pointer mode

Andrius,

Can you test this patch?

Now all edges created in Show All Pointers are to children or parent.
Comment 6 Wagner Reck 2012-09-23 13:44:08 UTC
Hello Andrius,

this bug was fixed in version 4.9.1.

If you think that the bug isn't, please reopen this report.

Thanks for your time.

wagner