Fix manual creation of edges (pointers) when not showing all pointers

Rooted tree have 2 types of view, in one all pointers are painted,
and in the other one only pointers to the children are painted. This commit
fixes the manual creation of edges in last one.

BUG:303570
FIXED-IN:4.9
CCMAIL: andriusmao@gmail.com
(cherry picked from commit 68e70d618a12d8e0de9c7445d330ccdead3a12a5)